networkpolicy/networkpolicy__basic_kafka_setup__prometheus__all__prometheus__egress__ports__prometheus__nr59__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus--all--prometheus--egress--ports--prometheus--nr59
  namespace: prometheus
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: prometheus
